--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "front": "cd ./front && npm run dev",
     "back": "cd ./back && npm run dev",
     "deps": "cd ./front && npm i && cd ../back && npm i"
+  },
+  "dependencies": {
+
   }
 }
