--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^5.8.2",
     "@mantine/hooks": "^5.8.2",
     "@mantine/modals": "^5.8.2",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
